--- a/colorGame.css
+++ b/colorGame.css
@@ -72,4 +72,9 @@ button:hover{
 #message{
     display: inline-block;
     width: 20%;
+    font-weight: 700;
+    color: steelblue;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  /*  font-size: inherit;*/
 }
